// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interested-party-comments GET /reject/check-your-answers should render check your answers page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l">Check details and reject comment</h1>
                </div>
            </div>
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                    <dd class="govuk-summary-list__value">Lee Thornton</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="pins-show-more">Awaiting review comment 47</div>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decision</dt>
                    <dd class="govuk-summary-list__value">Comment rejected</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/review"> Change<span class="govuk-visually-hidden"> Review decision</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Why are you rejecting the comment?</dt>
                    <dd                     class="govuk-summary-list__value">
                        <ul class="govuk-list govuk-!-margin-top-0 govuk-!-padding-left-0 govuk-list--bullet">
                            <li></li>
                        </ul>
                        </dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/reject/select-reason"> Change<span class="govuk-visually-hidden"> Why are you rejecting the comment?</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you want to allow the interested party to resubmit a comment?</dt>
                    <dd                     class="govuk-summary-list__value">No</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/reject/allow-resubmit"> Change<span class="govuk-visually-hidden"> Do you want to allow the interested party to resubmit a comment?</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body">We will send an email to the interested party to explain why you rejected
                their comment.</p>
            <form method="post" novalidate="novalidate">
                <button class="govuk-button" data-module="govuk-button">Reject comment</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /reject/select-reason should render reject comment page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Why are you rejecting the comment?</h1>
                </div>
            </div>
            <form method="post" novalidate="novalidate">
                <div class="govuk-fieldset">
                    <div class="govuk-hint">Select all that apply.</div>
                    <div class="govuk-form-group">
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason" name="rejectionReason"
                                type="checkbox" value="1">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason">Received after deadline</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-2" name="rejectionReason"
                                type="checkbox" value="2">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-2">Includes personal and/or medical information</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-3" name="rejectionReason"
                                type="checkbox" value="3">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-3">Includes inflammatory content</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-4" name="rejectionReason"
                                type="checkbox" value="4">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-4">Duplicated comment</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-5" name="rejectionReason"
                                type="checkbox" value="5">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-5">Not relevant to this appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-6" name="rejectionReason"
                                type="checkbox" value="6">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-6">Contains links to web pages</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-7" name="rejectionReason"
                                type="checkbox" value="7" data-aria-controls="conditional-rejection-reason-7">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-7">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-rejection-reason-7">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="rejectionReason-7" class="govuk-body govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="" name="rejectionReason-7" type="text">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </div>
                    <button type="submit" data-prevent-double-click="true" class="govuk-button"
                    data-module="govuk-button">Continue</button>
                </div>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /review-comment with data should render review comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Review comment</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <dl class="govuk-summary-list">
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                        <dd class="govuk-summary-list__value">Lee Thornton</dd>
                    </div>
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                        <dd class="govuk-summary-list__value">test1@example.com</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                        <dd class="govuk-summary-list__value">Not provided</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=true&amp;editAddress=false"> Add<span class="govuk-visually-hidden"> address</span></a>
                        </dd>
                    </div>
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
                        <dd                         class="govuk-summary-list__value">9 October 2024</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                        <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/redact"> Redact</a>
                        </dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                        <dd class="govuk-summary-list__value">Not provided</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                        </dd>
                    </div>
                </dl>
                <div class="govuk-form-group">
                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                        <div class="govuk-checkboxes__item">
                            <input class="govuk-checkboxes__input" id="site-visit-request" name="site-visit-request"
                            type="checkbox" value="site-visit">
                            <label class="govuk-label govuk-checkboxes__label" for="site-visit-request">The comment includes a site visit request</label>
                        </div>
                    </div>
                </div>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept comment</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-2">Reject comment</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class="govuk-!-margin-bottom-3"></div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /view-comment with data should render view comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">View comment</h1>
        </div>
    </div>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">Not provided</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=false&amp;editAddress=false"> Add<span class="govuk-visually-hidden"> address</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Site visit requested</dt>
            <dd class="govuk-summary-list__value">No</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
            <dd             class="govuk-summary-list__value">9 October 2024</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/redact"> Redact</a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">Not provided</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
            </dd>
        </div>
    </dl>
    <div class="govuk-!-margin-bottom-3"></div>
</main>"
`;
